Added react support

--- a/src/index.html
+++ b/src/index.html
@@ -10,20 +10,7 @@
 </head>
 
 <body>
-    <div class="wrapper">
-        <div class="wrapper-container">
-            <div class="wrapper-container__block">
-                <div class="kipicenko-container-img">
-                    <img src="./img/kipicenko.jpg" alt="avatar">
-                </div>
-                <h1 class="text">Cборка webpack 5</h1>
-                <div class="info">
-                    <div>My repository: </div>
-                    <a href="https://github.com/Kipicenko/webpack-assembly.git">https://github.com/Kipicenko/webpack-assembly.git</a>
-                </div>
-            </div>
-        </div>
-    </div>
+    <div id="root"></div>
 </body>
 
 </html>
